--- a/SI-Task4/AppStyle/ButtonStyle.xaml
+++ b/SI-Task4/AppStyle/ButtonStyle.xaml
@@ -4,6 +4,14 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Style
         x:Key="BTNMain"
-        BasedOn="{StaticResource MaterialDesignFloatingActionMiniSecondaryDarkButton}"
-        TargetType="Button" />
+        BasedOn="{StaticResource MaterialDesignFlatDarkBgButton}"
+        TargetType="Button">
+        <Setter Property="Width" Value="200"/>
+        <Setter Property="Height" Value="60"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="Margin" Value="10"/>
+        <Setter Property="FontSize" Value="40"/>
+    </Style>
 </ResourceDictionary>
